2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* accessibility-keyboard.desktop.in.in: renamed Bugzilla product.

2007-01-09  Thomas Wood  <thos@gnome.org>

	* accessibility-keyboard.desktop.in.in: Rename "Keyboard" to "Keyboard
	Accesibility". Fixes bug 330697 (Keyboard Accessibility applet has the
	same menu item as the Keyboard applet).

2006-07-23  Sebastien Bacher  <seb128@debian.org>

	* accessibility-keyboard.desktop.in.in: don't list the Application 
	category, patch by Vincent Fretin <vincent.fretin@gmail.com> 
	(Closes: #344321)

2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* accessibility-keyboard.c: Add #include "accessibility-keyboard.h".

2005-08-14  Sebastien Bacher  <seb128@debian.org>

	* accessibility-keyboard.c: (setup_ranges):
	don't use a page value, fix the different behaviour between widgets 
	(Closes: #301470).

2005-01-05  Sebastien Bacher  <seb128@debian.org>

	* gnome-accessibility-keyboard-properties.glade: fixed a typo in the
	label-for for the "pixels/second" label (Part of #162368).

2004-11-09  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: install .desktop file in $(datadir)/applications.
	
	* accessibility-keyboard.desktop.in: add OnlyShowIn=GNOME;

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-08-20  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gnome-accessibility-keyboard-properties.c: (main):
	Use themed icon for window hint.

2004-07-06  Padraig O'Briain <padraig.obriain@sun.com>

	* gnome-accessibility-keyboard-properties.glade:  Add label-for/
	labelled-by relations. Fixes bug #144174.

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-02-16  Jody Goldberg <jody@gnome.org>
