@@ -1,3 +1,10 @@
+2007-05-05  Jens Granseuer  <jensgr@gmx.net>
+
+	* accessibility-keyboard.c: (setup_images):
+	* gnome-accessibility-keyboard-properties.glade: set button images
+	via code instead of relying on glade, so they respect the
+	gtk-button-images xsetting (bug #362880)
+
 2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* accessibility-keyboard.desktop.in.in: renamed Bugzilla product.
